test/spec_vectors/unreached-invalid/fail/module_7.wat
(module (func $type-unconsumed-const (unreachable) (i32.const 0)))